[gd_scene load_steps=5 format=3 uid="uid://7yphnamglj67"]

[ext_resource type="Script" path="res://scenes/select_screen.gd" id="1_g771h"]
[ext_resource type="Shader" path="res://scenes/scroll.gdshader" id="2_gp703"]
[ext_resource type="Texture2D" uid="uid://bvjpkb43c76x0" path="res://sprites/gamePartSprites/background.png" id="3_ccsp0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_08tbf"]
shader = ExtResource("2_gp703")

[node name="Select Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g771h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = 16.0
offset_right = -24.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.752941, 1, 1)

[node name="Pattern" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_08tbf")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -112.0
offset_right = -24.0
offset_bottom = 130.182
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ccsp0")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -60.0
offset_right = 86.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Pig Select" type="Button" parent="MarginContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Pig Select"

[node name="Play" type="Button" parent="MarginContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Play"

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/HBoxContainer/Pig Select" to="." method="_on_pig_select_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
